<resources>
    <string name="app_name">NewsApp</string>
    <string name="ok">ok</string>
    <string name="fetching_news">Fetching News</string>
    <string name="news_source">News Source</string>
    <string name="news_date">News Date</string>
    <string name="news_title">News Title</string>
    <string name="view_full_article"><u>View Full Article</u></string>
    <string name="this_is_random_text_from_article">this is random text from article</string>
    <string name="world">world</string>
    <string name="hello">hello</string>
    <string name="todo">TODO</string>
    <string name="instagram">Instagram</string>
    <string name="search">Search</string>
    <string-array name="android_versions">
        <item>Cupcake</item>
        <item>HoneyComb</item>
        <item>Oreo</item>
        <item>Cupcake</item>
        <item>HoneyComb</item>
        <item>Oreo</item>
        <item>Cupcake</item>
        <item>HoneyComb</item>
        <item>Oreo</item>
        <item>Cupcake</item>
        <item>HoneyComb</item>
        <item>Oreo</item>
        <item>Cupcake</item>
        <item>HoneyComb</item>
        <item>Oreo</item>
        <item>Cupcake</item>
        <item>HoneyComb</item>
        <item>Oreo</item>
        <item>Cupcake</item>
        <item>HoneyComb</item>
        <item>Oreo</item>
        <item>Cupcake</item>
        <item>HoneyComb</item>
        <item>Oreo</item>
        <item>Cupcake</item>
        <item>HoneyComb</item>
        <item>Oreo</item>
        <item>Cupcake</item>
        <item>HoneyComb</item>
        <item>Oreo</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_bookmarked_articles">No Bookmarked Articles</string>
</resources>
