<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="250dp"
    android:background="@drawable/bottom_border"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/bookmarkView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bookmarkImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:src="@drawable/bluetwitter" />

            <TextView
                android:id="@+id/bookmarkTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/news_title"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <TextView
                    android:id="@+id/bookmarkID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="143dp"
                    tools:layout_editor_absoluteY="9dp" />

                <TextView
                    android:id="@+id/bookmarkImgURL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="135dp"
                    tools:layout_editor_absoluteY="8dp" />

                <ImageView
                    android:id="@+id/bookmark_Change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="#FFFFFF"
                    android:baselineAlignBottom="false"
                    android:contentDescription="@string/app_name"
                    android:scaleType="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_bookmark_border_24px"
                    tools:srcCompat="@drawable/ic_bookmark_border_24px"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/bookmarkURL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/bookmarkSource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/news_source"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView" />

                <TextView
                    android:id="@+id/bookmarkDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/news_date"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text=" | "
                    android:textColor="@android:color/holo_purple"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bookmarkDate"
                    tools:ignore="SmallSp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>